--- a/informe/parte2.tex
+++ b/informe/parte2.tex
@@ -28,4 +28,4 @@ El segundo caso refleja el mismo funcionamiento pero quad-core, con iguales quan
 
 \input{sched_lottery.tex}
 \input{ecuanimidad_lottery.tex}
-\input{experimentos.tex}
+%\input{experimentos.tex}
