--- a/informe/ej8.tex
+++ b/informe/ej8.tex
@@ -6,7 +6,7 @@ Para comparar el funcionamiento de los dos schedulers simularemos el comportamie
 	\item Lote 2: conformada por tareas de tipo interactivas. Simulará a un lote de tareas de un celular.
 	\item Lote 3: conformada por tareas que solo hacen uso intensivo de CPU.
 \end{itemize}
-Para cada uno de los lotes calcularemos el waiting time y turnaround time promedio para cada scheduler tomando distintos valores de quantum y probando con 2, 3 y 4 cores. Teniendo en cuenta los resultados concluiremos cuál de los dos algoritmos se comporta mejor.
+Para cada uno de los lotes calcularemos el waiting time y turnaround time promedio para cada scheduler tomando distintos valores de quantum y probando con 2, 3 y 4 cores. Los costos de cambio de contexto y migración serán 1 y 2 repectivamente. Teniendo en cuenta los resultados concluiremos cuál de los dos algoritmos se comporta mejor.
 
 \subsubsection{Lote 1: Pc}
 
