modificaciones en informe

--- a/informe/ej8.tex
+++ b/informe/ej8.tex
@@ -69,6 +69,7 @@ Para cada uno de los lotes calcularemos el waiting time y turnaround time promed
     4 & 58.5 & 44.98 & 1112.45 & 847.02 \\
 	\hline
     \end{tabular}
+\captionof{table}{Waiting time y Turnaround time promedio para cada scheduler}
 \end{center}
 
 Observando la tabla podemos concluir que el schedRR2 tiene un mejor wt y ta en promedio para un lote de tareas pc.
@@ -138,6 +139,7 @@ Observando la tabla podemos concluir que el schedRR2 tiene un mejor wt y ta en p
     4 & 24.58 & 10.67 & 696.76 & 404.9 \\
 	\hline
     \end{tabular}
+\captionof{table}{Waiting time y Turnaround time promedio para cada scheduler}
 \end{center}
 
 Observando la tabla podemos concluir que el schedRR2 tiene un mejor wt y ta en promedio para un lote de tareas celular.
@@ -207,6 +209,7 @@ Observando la tabla podemos concluir que el schedRR2 tiene un mejor wt y ta en p
     4 & 118.75 & 100.94 & 1537.24 & 1187.93 \\
 	\hline
     \end{tabular}
+\captionof{table}{Waiting time y Turnaround time promedio para cada scheduler}
 \end{center}
 
 Observando la tabla podemos concluir que el schedRR2 tiene un mejor wt y ta en promedio para un lote de tareas de uso intensivo de CPU.
